2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: test/dbi.scm, test/dbd.scm
	  Now test.scm is splitted into test/dbi.scm(via DBI test) and
	  test/dbd.scm(low level test/not implemented yet).

	* Fix: dbd_mysqllib.stub
	  Use SCM_STRING_BODY* API instead of Scm_GetStringConst and SCM_STRING_SIZE.

2007-01-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: Makefile.in
	  Delete VERSION and DIST_EXCLUDE_X only when invoke make maintainer-clean.

2007-01-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: Makefile.in
	  Add datarootdir definition.

2006-03-20  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* release 0.2.2

2006-03-03 ENDO Yasuyuki <yasuyuki@javaopen.org>

	* dbd_mysqllib.stub (ER_ERROR_MESSAGES): comment out this entry, it's not exist mysql-5.0. 

2005-11-07  Shiro Kawai  <shiro@acm.org>

	* release 0.2.1

2005-11-06  Katsutoshi Itoh  <cut-sea@master.email.ne.jp>

	* modify include path of mysql.h.
	* move drop table test after all test before close db.
	  because if user environment has no test table, then error occured.

2005-11-04  Shiro Kawai  <shiro@acm.org>

	* release 0.2
	
	* configure.in, Makefile.in : adapted to prefix override, i.e.
	  you can pass --prefix (or --libdir/datadir) to configure to
	  customize where the module is installed.

2005-11-03  Shiro Kawai  <shiro@acm.org>

	* dbd/mysql.scm (<mysql-result-set>, referencer, relation-rows):
	  adapted to the change of the relation framework protocol.

2005-09-10  Shiro Kawai  <shiro@acm.org>

	* dbd_mysqllib.scm: use foreign pointer attribute to keep track of
	  whether a handle is already closed/freed or not.
	  This adds mysql-handle-closed? and mysql-res-closed? APIs.
	* dbd_mysql.c: use the above information to prevent finalizers
	  from freeing mysql structure more than once.
	* dbd/mysql.scm: drop dependency to <dbi-object> and <dbi-result-set>.
	  Define dbi-open? method to query the low-level handle about
	  open/close status.  Fixed some bugs.
