@@ -1,11 +1,11 @@
 dnl
 dnl Configuring Gauche-dbd-mysql
 dnl  process this file with autoconf to generate 'configure'.
-dnl $Id: configure.in,v 1.4 2006/03/20 07:06:09 yasuyuki Exp $
+dnl $Id: configure.in,v 1.5 2007/02/15 10:56:47 bizenn Exp $
 dnl
 
-AC_PREREQ(2.54)
-AC_INIT(Gauche-dbd-mysql, 0.2.2, shiro@acm.org)
+AC_PREREQ(2.59)
+AC_INIT(Gauche-dbd-mysql, 0.3_pre0, info@kahua.org)
 dnl If you want to use the system name (OS, architecture, etc) in the
 dnl configure, uncomment the following line.  In such a case, you need
 dnl to copy config.guess and config.sub from automake distribution.
