@@ -1,5 +1,12 @@
 2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: dbd/mysql.scm
+	  Export <mysql-error> and <mysql-stmt-error>.
+
+	* Change: dbd_mysqllib.stub
+	  Now mysql-real-query return #<undef> and raise <mysql-error>
+	  if error occurred.
+
 	* Change: test/dbi.scm, test/dbd.scm
 	  Now test.scm is splitted into test/dbi.scm(via DBI test) and
 	  test/dbd.scm(low level test/not implemented yet).
